# fiiscore

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  router.py  scrap_main.py  setup.sh
src/api/: output.py  scrapper.py
src/domain/api/: input.py  output.py  scrapper.py
src/domain/model/: fii.py  indicator.py
src/domain/repository/: fii_duplicated_exception.py  fii_repository.py
src/domain/scrap/: fii_not_fount_exception.py  funds_explorer_scraper.py
src/domain/scrap/model/: fii.py  indicator.py
src/domain/service/: fii_service.py  fundamental_analysis_service.py
src/infra/db/: mongo_connect.py
src/model/: fii.py  indicator.py
src/scrap/: funds_exploorer_scraper.py  funds_explorer_scraper.py
test/domain/model/: fii_test.py  fii_with_forecast_test.py  indicator_test.py
test/domain/scrap/: founds_explorer_scrapper_test.py
test/domain/scrap/model/: fii_scrapper_test.py  fii_scrapper_with_forecast_test.py  indicator_test.py
test/domain/service/: fundamental_analysis_service_test.py
test/model/: indicator_test.py
test/scrap/: founds_explorer_scrapper_test.py
