[tool.poetry]
name = "fiiscore"
version = "0.1.0"
description = "Store and score fiis by some indicators."
authors = ["manorfm <manorfm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
fastapi = "^0.95.0"
unicorn = "^2.0.1"
pymongo = "^4.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"