[tool.poetry]
name = "fiiscore"
version = "0.1.0"
description = "Store and score fiis by some indicators."
authors = ["manorfm <manorfm@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.23.2"
pymongo = "^4.3.3"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"